--- a/style.css
+++ b/style.css
@@ -7,8 +7,17 @@ h2, h3 {
     font-weight: 600;
 }
 
+h4 {
+    font-weight: 600;
+}
+
 .container {
     max-width: 1300px;
+}
+
+.card-body {
+    padding: 0.75rem;
+    padding-bottom: 0;
 }
 
 #currentWeather {
