--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@ h4 {
     margin-bottom: 10px;
 }
 
+.uvPadding {
+    padding: 7px;
+    border-radius: 0.3rem;
+}
+
 .card-body {
     padding: 0.75rem;
     padding-bottom: 0;
